Tue Mar 10 2015
1. Bug fixing
   * Display the correct number of observations in the output for mixed response models
   * Correct the check for levels in MCMC options to take into account the added level in multivariate/multinomial models
   * Fixed a bug when specifying an interaction term as a common variable

Thu Mar 5 2015
1. Bug fixing
   * Fixed the transfer to MLwiN of starting values for the fixed part covariance matrix when using MCMC estmation
   * Fixed reference category check for ordered multinomial models when the response variable has string labels

2. Changes
   * Update default OpenBUGS location in demos

Fri Feb 27 2015
1. Bug fixing
   * Give error message is logLik or deviance are requested for non-normal models
   * Correct prediction calculation to take denominator/offset into account
   * Correct the preduction calculation when "terms" option is specified
   * Fixed a bug when specifying common variables in mixed response models
   * Allow interactions in the random part when using the newer syntax

2. Changes
   * Modified MCMCGuide08 demo to run simulations in parallel using the doParallel package
   * Modified MCMCGuide11 demo to run last model for full number of iterations
   * Removed df.residual method for MCMC models
   * Switched the position of the level identifier and predictor variables in the model formula

Wed Jan 31 2015
1. Bug fixing
   * Allow matrix2df to work with unnamed columns
   * Correctly handle "1" within the clre parameter
   * Correct calculations related to standardised residuals
   * Correct function default values
   * Check residuals were stored when calling PredCurves/PredLines
   * Correct applying fixed part starting values
   * Save starting values in the order expected by MLwiN
   * Correct handling of common coefficients for categorical variables
   * Correct handling categorical predictors that contain missing values
   * No longer automatically print out chain summaries when using BUGS options