@@ -50,9 +50,9 @@ data(gcsecomp1, package="R2MLwiN")
 
 ## Store residual chain at level 3: school
 (mymodel <- runMLwiN(c(written, csework) ~ 1 + female + (1 | school) + (1 | student), D = "Multivariate Normal", estoptions = list(EstM = 1, 
-  resi.store = TRUE, resi.store.levs = 3), data = gcsecomp1))
+  resi.store = TRUE, resi.store.levs = 2), data = gcsecomp1))
 
-resi <- mymodel@resi.chains$resi_lev3
+resi <- mymodel@resi.chains$resi_lev2
 label <- 1:ncol(resi)
 
 ## highlight
